--- a/ape-config.yaml
+++ b/ape-config.yaml
@@ -3,3 +3,8 @@ node:
     mainnet:
       uri: "${ETH_RPC_URL}"
       ws_uri: "${ETH_WS_URL}"
+  
+  base:
+    mainnet:
+      uri: "${BASE_RPC_URL}"
+      ws_uri: "${BASE_WS_URL}"
