--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "ykicks"
+name = "dutch-monitor"
 version = "0.1.0"
-description = "Real-time monitoring of Yearn’s new generation (NG) dumping services"
+description = "Monitors Yearn's Dutch Auctions"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
