feat: build in docker image and restart on cron

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,6 @@ services:
   eth-dutch-monitor:
     build: .
     container_name: eth-dutch-monitor
-    volumes:
-      - .:/app
-      - /app/.venv
-    working_dir: /app
     env_file: .env
-    command: >
-      bash -lc "
-        uv venv --clear &&
-        . .venv/bin/activate &&
-        uv sync &&
-        silverback run --network :mainnet
-      "
+    command: ["run", "--network", ":mainnet"]
     restart: unless-stopped
