--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = "Monitors Yearn's Dutch Auctions"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "ruff==0.11.5",
-    "mypy==1.15.0",
-    "python-dotenv==1.1.0",
-    "python-telegram-bot==22.0",
-    "eth-ape==0.8.36",
-    "silverback==0.7.27",
-    "ape-etherscan==0.8.4",
+    "ruff==0.14.11",
+    "mypy==1.19.1",
+    "python-dotenv==1.2.0",
+    "python-telegram-bot==22.5",
+    "eth-ape==0.8.45",
+    #"silverback==0.7.35",
+    "silverback @ git+https://github.com/ApeWorX/silverback.git@feat/multiple-addresses",
+    "ape-etherscan==0.8.5",
 ]
 
 [tool.setuptools.packages.find]
